Fix for Windows Add output csv