@@ -16,11 +16,11 @@
 
 package com.vrbo.jarviz.service;
 
-import java.io.File;
 import java.io.IOException;
 import java.net.MalformedURLException;
 import java.net.URL;
 import java.net.URLClassLoader;
+import java.nio.file.Path;
 import java.util.List;
 import java.util.function.Predicate;
 
@@ -50,19 +50,20 @@ public class JarClassLoaderService implements ClassLoaderService {
     }
 
     /**
-     * This will scan the Jar file for all the classes and will return the fully qualified class names
-     * in the format of "com.foo.bar.MyClass".
+     * This will scan the Jar file for all the classes and will return the fully
+     * qualified class names in the format of "com.foo.bar.MyClass".
      *
      * @param artifact        The artifact to be scanned.
-     * @param classNameFilter A filter to conditionally select classes in the top level package.
-     *                        Class name will be in the format "com.foo.bar.MyClass".
-     * @return A list of fully qualified class names for all the classes loaded (matching the above criteria).
+     * @param classNameFilter A filter to conditionally select classes in the top
+     *                        level package. Class name will be in the format
+     *                        "com.foo.bar.MyClass".
+     * @return A list of fully qualified class names for all the classes loaded
+     *         (matching the above criteria).
      */
     @Override
-    public List<ShadowClass> getAllClasses(@Nonnull Artifact artifact,
-                                           @Nonnull final Predicate<String> classNameFilter) {
+    public List<ShadowClass> getAllClasses(@Nonnull Artifact artifact, @Nonnull final Predicate<String> classNameFilter) {
 
-        final File jarFile;
+        final Path jarFile;
         try {
             jarFile = artifactDiscoveryService.discoverArtifact(artifact);
         } catch (ArtifactNotFoundException e) {
@@ -70,27 +71,23 @@ public class JarClassLoaderService implements ClassLoaderService {
             throw new IllegalArgumentException(String.format("Jar file does not exist: %s", artifact.toFileName()), e);
         }
 
-        final String jarFilePath = jarFile.getPath();
+        final String jarFilePath = jarFile.toString();
         final ClassPath classPath;
         try {
-            final ClassLoader classLoader = creatClassLoaderForJar(jarFilePath);
+            final ClassLoader classLoader = creatClassLoaderForJar(jarFile);
             classPath = ClassPath.from(classLoader);
         } catch (IOException e) {
             log.error("Unable to create classloader for jar {}", jarFilePath, e);
             throw new IllegalStateException(String.format("Unable to create classloader for jar %s", jarFilePath), e);
         }
 
-        final String prefix = fileNameToJarPrefix(jarFilePath);
-        final Predicate<ClassPath.ClassInfo> predicateClassesOnlyFromJar =
-            classInfo -> classInfo.url().toString().startsWith(prefix);
-
-        final List<ClassPath.ClassInfo> classInfoList =
-            classPath.getAllClasses()
-                     .stream()
-                     .filter(predicateClassesOnlyFromJar)// select classes only from the Jar
-                     .filter(c -> classNameFilter.test(c.getName()))// apply the user defined filter
-                     .sorted(Ordering.natural().onResultOf(ClassPath.ClassInfo::getName))// always return the ordered list (by name)
-                     .collect(toList());
+        final String prefix = fileNameToJarPrefix(jarFile);
+        final Predicate<ClassPath.ClassInfo> predicateClassesOnlyFromJar = classInfo -> classInfo.url().toString().startsWith(prefix);
+        // select classes only from the Jar
+        final List<ClassPath.ClassInfo> classInfoList = classPath.getAllClasses().stream().filter(predicateClassesOnlyFromJar)
+                .filter(c -> classNameFilter.test(c.getName()))// apply the user defined filter
+                .sorted(Ordering.natural().onResultOf(ClassPath.ClassInfo::getName))// always return the ordered list (by name)
+                .collect(toList());
 
         final ImmutableList.Builder<ShadowClass> listBuilder = ImmutableList.builder();
         for (ClassPath.ClassInfo classInfo : classInfoList) {
@@ -106,23 +103,24 @@ public class JarClassLoaderService implements ClassLoaderService {
     }
 
     /**
-     * This will create a class loader using the bootstrap class loader as the parent.
-     * Then this class loader will load all the classes from the given Jar file.
-     * The bootstrap classloader is mainly responsible for loading JDK internal classes,
-     * typically rt.jar and other core libraries located in $JAVA_HOME/jre/lib directory.
-     * We are assuming here that the loaded classes from the Jar have not been already loaded
-     * in the bootstrap classloader (to prevent collisions). For each Jar, a new classloader
-     * is created before the analysis and that class loader is destroyed (unloaded) along with
-     * the loaded classes from the Jar after the analysis.
+     * This will create a class loader using the bootstrap class loader as the
+     * parent. Then this class loader will load all the classes from the given Jar
+     * file. The bootstrap classloader is mainly responsible for loading JDK
+     * internal classes, typically rt.jar and other core libraries located in
+     * $JAVA_HOME/jre/lib directory. We are assuming here that the loaded classes
+     * from the Jar have not been already loaded in the bootstrap classloader (to
+     * prevent collisions). For each Jar, a new classloader is created before the
+     * analysis and that class loader is destroyed (unloaded) along with the loaded
+     * classes from the Jar after the analysis.
      *
      * @param jarFileName File name for the jar.
      * @return A classloader which is a child class loader of bootstrap class loader
      * @throws MalformedURLException For invalid file names
      */
-    private static ClassLoader creatClassLoaderForJar(@Nonnull final String jarFileName) throws MalformedURLException {
-        final URL jarURL = new URL(fileNameToFileProtocol(jarFileName));
+    private static ClassLoader creatClassLoaderForJar(@Nonnull final Path jarFileName) throws MalformedURLException {
+        final URL jarURL = jarFileName.toUri().toURL();
         final ClassLoader bootstrapClassLoader = ClassLoader.getSystemClassLoader().getParent();
-        return URLClassLoader.newInstance(new URL[] {jarURL}, bootstrapClassLoader);
+        return URLClassLoader.newInstance(new URL[] { jarURL }, bootstrapClassLoader);
     }
 
     /**
@@ -132,10 +130,7 @@ public class JarClassLoaderService implements ClassLoaderService {
      * @return The {@link ShadowClass}.
      */
     static ShadowClass mapClassInfoToShadowClass(@Nonnull final ClassPath.ClassInfo classInfo) throws IOException {
-        return new ShadowClass.Builder()
-                   .className(classInfo.getName())
-                   .classBytes(classInfo.asByteSource().read())
-                   .build();
+        return new ShadowClass.Builder().className(classInfo.getName()).classBytes(classInfo.asByteSource().read()).build();
     }
 
     /**
@@ -158,7 +153,12 @@ public class JarClassLoaderService implements ClassLoaderService {
      * @param jarFileFullPath Full path for the jar file.
      * @return The name in file protocol format with jar: prefix.
      */
-    static String fileNameToJarPrefix(@Nonnull final String jarFileFullPath) {
-        return "jar:" + fileNameToFileProtocol(jarFileFullPath) + "!";
+    static String fileNameToJarPrefix(@Nonnull final Path jarFileFullPath) {
+        try {
+            return "jar:" + jarFileFullPath.toUri().toURL() + "!";
+        } catch (MalformedURLException e) {
+        }
+        return "jar:" + jarFileFullPath.toUri() + "!";
+
     }
 }
